--- a/yolo_v3.ipynb
+++ b/yolo_v3.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "#### Code reference : https://machinelearningmastery.com/how-to-perform-object-detection-with-yolov3-in-keras/\n",
-    "* The Code is not entirely same , there are few changes ."
+    "* This Code is not entirely same , there are few changes ."
    ]
   },
   {
